// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SessionExtension shows a guide to install the extension if no extension installed 1`] = `
<sessionframe-stub>
  <div
    class="session"
  >
    <div
      class="session-container"
    >
      <h2
        class="session-title"
      >
        
        Use Lunie browser extension
      
      </h2>
       
      <div
        class="session-main"
      >
        <p>
          
          Please install the Lunie browser extension from the
          
          <a
            href="https://chrome.google.com/webstore/category/extensions"
            rel="noopener norefferer"
            target="_blank"
          >
            Chrome Web Store
          </a>
          .
        
        </p>
      </div>
    </div>
  </div>
</sessionframe-stub>
`;

exports[`SessionExtension shows an overview of all wallets to sign in with from the extension 1`] = `
<sessionframe-stub>
  <div
    class="session"
  >
    <div
      class="session-container"
    >
      <h2
        class="session-title"
      >
        
        Use Lunie browser extension
      
      </h2>
       
      <div
        class="session-main"
      >
        
        Below is a list of accounts we received from the Lunie browser
        extension.
        
        <accountlist-stub
          accounts="[object Object],[object Object]"
        />
      </div>
    </div>
  </div>
</sessionframe-stub>
`;
